test/sematest/invalid/invalid_lvalue.java
class Foo {
  public int f() { return 3; }

  public static void main(String[] args) {
    true = true;

    1 = 3 + 2;

    null = new Foo();

    Foo f;

    f.f() = 10;
  }
}
